Grabbed 2021 set list from brickset. Added database functionality to brickset list. Tweaked set list generating functions to use database table instead of reading csv from my google drive.

--- a/Data Analysis/Lego_Data_Analysis.ipynb
+++ b/Data Analysis/Lego_Data_Analysis.ipynb
@@ -1750,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 90,
    "id": "02d2f7dc",
    "metadata": {},
    "outputs": [
@@ -1807,7 +1807,7 @@
        "75827              166.50"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1825,7 +1825,9 @@
    "id": "9f0fcd22",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Now I need to merge the grouped % appreciation back into the set metadata df\n"
+   ]
   }
  ],
  "metadata": {
