minor clean up tweak

--- a/Data Analysis/Lego_Data_Analysis.ipynb
+++ b/Data Analysis/Lego_Data_Analysis.ipynb
@@ -107,8 +107,7 @@
    ],
    "source": [
     "# find how many unique set_num there are\n",
-    "num_of_sets = len(pd.unique(df['set_num']))\n",
-    "print(f\"There is data for {num_of_sets} Lego sets\")"
+    "num_of_sets = len(pd.unique(df['set_num']))\n"
    ]
   },
   {
@@ -144,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "id": "bb59636e-753a-4913-8917-1256d236da8f",
    "metadata": {},
    "outputs": [
@@ -152,9 +151,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-01-07 00:00:00\n",
-      "2022-02-23 00:00:00\n",
-      "47 days 00:00:00\n"
+      "Earliest price data: 2022-01-07 00:00:00\n",
+      "Latest price data: 2022-02-23 00:00:00\n",
+      "Days of data: 47 days 00:00:00\n",
+      "Price data for 1935 Lego sets\n",
+      "Total rows: 77996\n"
      ]
     }
    ],
@@ -163,9 +164,12 @@
     "oldest_date = df['date'].min()\n",
     "recent_date = df['date'].max()\n",
     "date_difference = recent_date - oldest_date\n",
-    "print(oldest_date)\n",
-    "print(recent_date)\n",
-    "print(date_difference)"
+    "num_of_rows = len(df.index)\n",
+    "print(f'Earliest price data: {oldest_date}')\n",
+    "print(f'Latest price data: {recent_date}')\n",
+    "print(f'Days of data: {date_difference}')\n",
+    "print(f\"Price data for {num_of_sets} Lego sets\")\n",
+    "print(f'Total rows: {num_of_rows}')"
    ]
   },
   {
@@ -2100,8 +2104,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "id": "9f0fcd22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now I need to merge the grouped % appreciation back into the set metadata df\n",
+    "final_df = pd.merge(df_set,\n",
+    "                    group_df[['set_num', 'pct_appreciation']],\n",
+    "                    on = 'set_num',\n",
+    "                    how = 'left' \n",
+    ")\n",
+    "# selected_rows = final_df[~final_df['pct_appreciation'].isnull()]\n",
+    "# selected_rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "e23ee959",
    "metadata": {},
    "outputs": [
     {
@@ -2168,6 +2189,27 @@
        "      <td>55.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>60012</td>\n",
+       "      <td>Coast Guard 4x4 &amp; Diving Boat</td>\n",
+       "      <td>Modern day</td>\n",
+       "      <td>City</td>\n",
+       "      <td>Coast Guard</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>19.99</td>\n",
+       "      <td>5 - 12</td>\n",
+       "      <td>Box</td>\n",
+       "      <td>Retail</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>2013-06-01</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>75975</td>\n",
        "      <td>Watchpoint: Gibraltar</td>\n",
@@ -2231,27 +2273,6 @@
        "      <td>168.250000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>10211</td>\n",
-       "      <td>Grand Emporium</td>\n",
-       "      <td>Model making</td>\n",
-       "      <td>Creator Expert</td>\n",
-       "      <td>Modular Buildings Collection</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>2182.0</td>\n",
-       "      <td>Jamie Berard</td>\n",
-       "      <td>149.99</td>\n",
-       "      <td>16+</td>\n",
-       "      <td>Box</td>\n",
-       "      <td>Retail - limited</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>2010-03-01</td>\n",
-       "      <td>2014-12-31</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>241.800000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -2271,90 +2292,6 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1853</th>\n",
-       "      <td>9509</td>\n",
-       "      <td>Star Wars Advent Calendar</td>\n",
-       "      <td>Licensed</td>\n",
-       "      <td>Star Wars</td>\n",
-       "      <td>Seasonal</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>234.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>49.99</td>\n",
-       "      <td>6 - 14</td>\n",
-       "      <td>Box</td>\n",
-       "      <td>Retail - limited</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>2012-09-01</td>\n",
-       "      <td>2012-12-31</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>90.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1854</th>\n",
-       "      <td>9515</td>\n",
-       "      <td>Malevolence</td>\n",
-       "      <td>Licensed</td>\n",
-       "      <td>Star Wars</td>\n",
-       "      <td>The Clone Wars</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>1092.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>119.99</td>\n",
-       "      <td>9 - 14</td>\n",
-       "      <td>Box</td>\n",
-       "      <td>Retail</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2012-06-01</td>\n",
-       "      <td>2013-12-31</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>179.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1855</th>\n",
-       "      <td>9516</td>\n",
-       "      <td>Jabba's Palace</td>\n",
-       "      <td>Licensed</td>\n",
-       "      <td>Star Wars</td>\n",
-       "      <td>Episode VI</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>717.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>119.99</td>\n",
-       "      <td>9 - 14</td>\n",
-       "      <td>Box</td>\n",
-       "      <td>Retail</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>2012-06-01</td>\n",
-       "      <td>2013-12-31</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>166.666667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1856</th>\n",
-       "      <td>9525</td>\n",
-       "      <td>Pre Vizsla's Mandalorian Fighter</td>\n",
-       "      <td>Licensed</td>\n",
-       "      <td>Star Wars</td>\n",
-       "      <td>The Clone Wars</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>403.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>49.99</td>\n",
-       "      <td>8 - 14</td>\n",
-       "      <td>Box</td>\n",
-       "      <td>Retail - limited</td>\n",
-       "      <td>4.1</td>\n",
-       "      <td>2012-08-01</td>\n",
-       "      <td>2013-12-31</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>441.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1857</th>\n",
@@ -2377,103 +2314,172 @@
        "      <td>6.0</td>\n",
        "      <td>390.500000</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1858</th>\n",
+       "      <td>9585</td>\n",
+       "      <td>WeDo Resource Set</td>\n",
+       "      <td>Educational</td>\n",
+       "      <td>Education</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>326.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>49.95</td>\n",
+       "      <td>7+</td>\n",
+       "      <td>Tub</td>\n",
+       "      <td>Educational</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2011-01-01</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1859</th>\n",
+       "      <td>9594</td>\n",
+       "      <td>Green City Challenge Set</td>\n",
+       "      <td>Educational</td>\n",
+       "      <td>Education</td>\n",
+       "      <td>Mindstorms</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1365.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>174.95</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2011-01-01</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1860</th>\n",
+       "      <td>9688</td>\n",
+       "      <td>Renewable Energy Add-On Set</td>\n",
+       "      <td>Educational</td>\n",
+       "      <td>Education</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>99.95</td>\n",
+       "      <td>8+</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2010-08-01</td>\n",
+       "      <td>2016-12-31</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1861</th>\n",
+       "      <td>9695</td>\n",
+       "      <td>LEGO Mindstorms Education Resource Set</td>\n",
+       "      <td>Educational</td>\n",
+       "      <td>Education</td>\n",
+       "      <td>Mindstorms</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>817.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>99.95</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1617 rows × 18 columns</p>\n",
+       "<p>1862 rows × 18 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      set_num                          set_name   theme_group           theme  \\\n",
-       "0       60009                 Helicopter Arrest    Modern day            City   \n",
-       "2       75975             Watchpoint: Gibraltar      Licensed       Overwatch   \n",
-       "3       10155        Maersk Line Container Ship  Model making  Creator Expert   \n",
-       "4       10210                 Imperial Flagship  Model making  Creator Expert   \n",
-       "5       10211                    Grand Emporium  Model making  Creator Expert   \n",
-       "...       ...                               ...           ...             ...   \n",
-       "1853     9509         Star Wars Advent Calendar      Licensed       Star Wars   \n",
-       "1854     9515                       Malevolence      Licensed       Star Wars   \n",
-       "1855     9516                    Jabba's Palace      Licensed       Star Wars   \n",
-       "1856     9525  Pre Vizsla's Mandalorian Fighter      Licensed       Star Wars   \n",
-       "1857     9526                Palpatine's Arrest      Licensed       Star Wars   \n",
+       "      set_num                                set_name   theme_group  \\\n",
+       "0       60009                       Helicopter Arrest    Modern day   \n",
+       "1       60012           Coast Guard 4x4 & Diving Boat    Modern day   \n",
+       "2       75975                   Watchpoint: Gibraltar      Licensed   \n",
+       "3       10155              Maersk Line Container Ship  Model making   \n",
+       "4       10210                       Imperial Flagship  Model making   \n",
+       "...       ...                                     ...           ...   \n",
+       "1857     9526                      Palpatine's Arrest      Licensed   \n",
+       "1858     9585                       WeDo Resource Set   Educational   \n",
+       "1859     9594                Green City Challenge Set   Educational   \n",
+       "1860     9688             Renewable Energy Add-On Set   Educational   \n",
+       "1861     9695  LEGO Mindstorms Education Resource Set   Educational   \n",
        "\n",
-       "                          subtheme  year_released  pieces  \\\n",
-       "0                           Police           2013   352.0   \n",
-       "2                             None           2019   730.0   \n",
-       "3                           Maersk           2010   990.0   \n",
-       "4                    Miscellaneous           2010  1664.0   \n",
-       "5     Modular Buildings Collection           2010  2182.0   \n",
-       "...                            ...            ...     ...   \n",
-       "1853                      Seasonal           2012   234.0   \n",
-       "1854                The Clone Wars           2012  1092.0   \n",
-       "1855                    Episode VI           2012   717.0   \n",
-       "1856                The Clone Wars           2012   403.0   \n",
-       "1857                   Episode III           2012   645.0   \n",
+       "               theme       subtheme  year_released  pieces  \\\n",
+       "0               City         Police           2013   352.0   \n",
+       "1               City    Coast Guard           2013   128.0   \n",
+       "2          Overwatch           None           2019   730.0   \n",
+       "3     Creator Expert         Maersk           2010   990.0   \n",
+       "4     Creator Expert  Miscellaneous           2010  1664.0   \n",
+       "...              ...            ...            ...     ...   \n",
+       "1857       Star Wars    Episode III           2012   645.0   \n",
+       "1858       Education           None           2011   326.0   \n",
+       "1859       Education     Mindstorms           2011  1365.0   \n",
+       "1860       Education           None           2010    12.0   \n",
+       "1861       Education     Mindstorms           2010   817.0   \n",
        "\n",
        "                 designer    msrp age_range packaging      availability  \\\n",
        "0         Henrik Andersen   49.99    5 - 12       Box  Retail - limited   \n",
+       "1                    None   19.99    5 - 12       Box            Retail   \n",
        "2           Mark Stafford   89.99        9+       Box            Retail   \n",
        "3                    None  119.99        8+       Box    LEGO exclusive   \n",
        "4     Raphael Pretesacque  179.99       14+       Box  Retail - limited   \n",
-       "5            Jamie Berard  149.99       16+       Box  Retail - limited   \n",
        "...                   ...     ...       ...       ...               ...   \n",
-       "1853                 None   49.99    6 - 14       Box  Retail - limited   \n",
-       "1854                 None  119.99    9 - 14       Box            Retail   \n",
-       "1855                 None  119.99    9 - 14       Box            Retail   \n",
-       "1856                 None   49.99    8 - 14       Box  Retail - limited   \n",
        "1857                 None   89.99    9 - 14       Box            Retail   \n",
+       "1858                 None   49.95        7+       Tub       Educational   \n",
+       "1859                 None  174.95      None      None              None   \n",
+       "1860                 None   99.95        8+      None              None   \n",
+       "1861                 None   99.95      None      None              None   \n",
        "\n",
        "      rating launch_date retirement_date  minifigs_total  minifigs_unique  \\\n",
        "0        3.8  2013-01-01             NaT             5.0              NaN   \n",
+       "1        3.8  2013-06-01      2015-07-31             2.0              2.0   \n",
        "2        3.9  2019-01-01      2020-07-31             4.0              3.0   \n",
        "3        4.1  2010-08-01      2011-07-31             NaN              NaN   \n",
        "4        4.6  2010-01-01      2011-12-31             9.0              6.0   \n",
-       "5        4.4  2010-03-01      2014-12-31             7.0              7.0   \n",
        "...      ...         ...             ...             ...              ...   \n",
-       "1853     3.7  2012-09-01      2012-12-31            10.0              6.0   \n",
-       "1854     4.0  2012-06-01      2013-12-31             6.0              1.0   \n",
-       "1855     4.4  2012-06-01      2013-12-31            10.0              6.0   \n",
-       "1856     4.1  2012-08-01      2013-12-31             3.0              1.0   \n",
        "1857     4.4  2012-08-01      2013-12-31             6.0              6.0   \n",
+       "1858     NaN  2011-01-01             NaT             NaN              NaN   \n",
+       "1859     NaN  2011-01-01             NaT             1.0              1.0   \n",
+       "1860     NaN  2010-08-01      2016-12-31             NaN              NaN   \n",
+       "1861     NaN  2010-01-01             NaT             NaN              NaN   \n",
        "\n",
        "      pct_appreciation  \n",
        "0            55.333333  \n",
+       "1                  NaN  \n",
        "2           -21.000000  \n",
        "3           192.500000  \n",
        "4           168.250000  \n",
-       "5           241.800000  \n",
        "...                ...  \n",
-       "1853         90.000000  \n",
-       "1854        179.000000  \n",
-       "1855        166.666667  \n",
-       "1856        441.500000  \n",
        "1857        390.500000  \n",
+       "1858               NaN  \n",
+       "1859               NaN  \n",
+       "1860               NaN  \n",
+       "1861               NaN  \n",
        "\n",
-       "[1617 rows x 18 columns]"
+       "[1862 rows x 18 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Now I need to merge the grouped % appreciation back into the set metadata df\n",
-    "final_df = pd.merge(df_set,\n",
-    "                    group_df[['set_num', 'pct_appreciation']],\n",
-    "                    on = 'set_num',\n",
-    "                    how = 'left' \n",
-    ")\n",
-    "selected_rows = final_df[~final_df['pct_appreciation'].isnull()]\n",
-    "selected_rows"
+    "final_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e23ee959",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
