--- a/Data Analysis/Lego_Data_Analysis.ipynb
+++ b/Data Analysis/Lego_Data_Analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "ec4427e4-5b86-4acb-ab51-a16a949df422",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ed600996-7d01-427e-acc2-4e13e739343c",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "eaa11ded-1896-460a-a34b-c09b0eb5b458",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "b170d110-226f-4440-b214-f4a9b5565fe9",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "dee50c08-2f7b-4705-9705-4d78ce4f4192",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "20ab0333",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "f2256680-7b74-4035-9782-c89be319e4e3",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "d3459308-d765-4b91-9a00-53b906d4aaf3",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "bb59636e-753a-4913-8917-1256d236da8f",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "3010b99b-053a-4c70-9f34-6b2ee11d6a1c",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "False"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "5d69cd7a-5186-46ee-8dc0-aa8d18a01e18",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "002bb4b5-fb7f-44b9-a996-7309b1bda54d",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "9e69ed67-f24f-49aa-8fa6-2a5155b5b009",
    "metadata": {},
    "outputs": [],
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "09393d11-d9d1-44a9-bc10-f78afb86649b",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "(78992, 3)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "10819568-01a3-468c-9702-6eac25573953",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "483a5366-8a3e-424a-b481-13368ed98043",
    "metadata": {},
    "outputs": [],
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "3efc7302-a7fd-4c3d-8ccc-c4e05424ff32",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "(78901, 3)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "f4d8b64a-89e3-4686-b9fc-095073ffa060",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "814797ca-ff03-44b7-869a-382b99a29134",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "8e8ec799-2cdf-48a4-9bb4-6a1a21add39e",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "f54a6eb7-bdff-4083-8dd8-261f5e933d24",
    "metadata": {},
    "outputs": [
@@ -423,7 +423,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "2530b436-1575-4881-a8d9-f3d3196ffb91",
    "metadata": {},
    "outputs": [
@@ -619,7 +619,7 @@
        "4                   ✭✭✭✭✭ 4.6 171 ratings 16 Reviews  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "37950b96-21a1-44b8-a8d2-68d4cd479fa8",
    "metadata": {},
    "outputs": [],
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "6b346fec-e209-423b-b716-23334fba7494",
    "metadata": {},
    "outputs": [],
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "d356c47a-9fb8-43a6-a4d7-37a7c0c9e82a",
    "metadata": {},
    "outputs": [],
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "da09bb60-6f59-405f-8838-1c3cb6a25aa6",
    "metadata": {},
    "outputs": [],
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "e0f74f95-c51c-4bc0-b5d6-0ac218f39ac7",
    "metadata": {},
    "outputs": [],
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "ba1d7413-e9e9-49b7-8858-8264a8ac67da",
    "metadata": {},
    "outputs": [],
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "28f04852-b4fd-4462-a137-9cd950211e14",
    "metadata": {},
    "outputs": [],
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "396d7887-213b-46a6-9194-f1cb1a0260fa",
    "metadata": {},
    "outputs": [],
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "821e92b2-8d56-4d05-8890-4013773ba544",
    "metadata": {},
    "outputs": [],
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "588760cb-948a-4d4d-9de8-d561a21f0420",
    "metadata": {},
    "outputs": [],
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "2c20e8d2-912d-4b72-b64f-e54cc2e8796f",
    "metadata": {},
    "outputs": [],
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "08311c27-9f31-41e7-a52a-a8dad9348219",
    "metadata": {},
    "outputs": [],
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "f2664d39-5eb0-4f01-bea6-dfdbde50b63a",
    "metadata": {},
    "outputs": [],
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "d7a66251-5d24-4032-9e2d-fa30d9a5181f",
    "metadata": {},
    "outputs": [
@@ -809,7 +809,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "6c68dfe6-eb7c-4e4e-9970-93de39e99c59",
    "metadata": {},
    "outputs": [
@@ -1157,7 +1157,7 @@
        "[1862 rows x 16 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "70ddc94e",
    "metadata": {},
    "outputs": [
@@ -1179,7 +1179,7 @@
        "True"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "0f61505c-6d3f-48a4-a510-a5c1b2969816",
    "metadata": {},
    "outputs": [],
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "6506e924",
    "metadata": {},
    "outputs": [],
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "157a1fb3",
    "metadata": {},
    "outputs": [],
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "id": "d8047e98",
    "metadata": {},
    "outputs": [],
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "id": "9b336327",
    "metadata": {},
    "outputs": [
@@ -1711,7 +1711,7 @@
        "28    10214 2022-02-24  219.990000"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1730,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "id": "ce85ea58",
    "metadata": {},
    "outputs": [
@@ -1757,7 +1757,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1769,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "id": "af7217ab",
    "metadata": {},
    "outputs": [
@@ -1782,7 +1782,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1794,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "id": "a438ec79",
    "metadata": {},
    "outputs": [
@@ -1874,7 +1874,7 @@
        "4    76941 2022-02-23  57.944516   NaN"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1892,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "18882f01",
    "metadata": {},
    "outputs": [
@@ -1984,7 +1984,7 @@
        "4    76941 2022-02-23  57.944516   NaN           NaN               NaN"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2001,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "id": "82ff64ae",
    "metadata": {},
    "outputs": [],
@@ -2015,7 +2015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "id": "02d2f7dc",
    "metadata": {},
    "outputs": [
@@ -2083,7 +2083,7 @@
        "4     2504              80.0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2097,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "id": "9f0fcd22",
    "metadata": {},
    "outputs": [],
@@ -2114,7 +2114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "id": "e23ee959",
    "metadata": {},
    "outputs": [
@@ -2465,7 +2465,7 @@
        "[1862 rows x 18 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2473,6 +2473,25 @@
    "source": [
     "final_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "51da2168",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save as csv to use in another notebook for playing around with ML\n",
+    "final_df.to_csv('final_cleaned_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b66659f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
