--- a/Data Analysis/prediction.ipynb
+++ b/Data Analysis/prediction.ipynb
@@ -250,7 +250,7 @@
        "    <tr>\n",
        "      <th>60009</th>\n",
        "      <td>Modern day</td>\n",
-       "      <td>55.3</td>\n",
+       "      <td>56.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>60012</th>\n",
@@ -260,17 +260,17 @@
        "    <tr>\n",
        "      <th>75975</th>\n",
        "      <td>Licensed</td>\n",
-       "      <td>-21.0</td>\n",
+       "      <td>-6.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10155</th>\n",
        "      <td>Model making</td>\n",
-       "      <td>151.5</td>\n",
+       "      <td>205.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10210</th>\n",
        "      <td>Model making</td>\n",
-       "      <td>168.2</td>\n",
+       "      <td>630.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -280,7 +280,7 @@
        "    <tr>\n",
        "      <th>9526</th>\n",
        "      <td>Licensed</td>\n",
-       "      <td>390.5</td>\n",
+       "      <td>468.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9585</th>\n",
@@ -310,13 +310,13 @@
       "text/plain": [
        "          theme_group  pct_appreciation\n",
        "set_num                                \n",
-       "60009      Modern day              55.3\n",
+       "60009      Modern day              56.5\n",
        "60012      Modern day               NaN\n",
-       "75975        Licensed             -21.0\n",
-       "10155    Model making             151.5\n",
-       "10210    Model making             168.2\n",
+       "75975        Licensed              -6.8\n",
+       "10155    Model making             205.2\n",
+       "10210    Model making             630.0\n",
        "...               ...               ...\n",
-       "9526         Licensed             390.5\n",
+       "9526         Licensed             468.0\n",
        "9585      Educational               NaN\n",
        "9594      Educational               NaN\n",
        "9688      Educational               NaN\n",
@@ -331,190 +331,27 @@
     }
    ],
    "source": [
+    "# lets try a simple example using just theme group\n",
     "df_test = df[ ['theme_group', 'pct_appreciation'] ]\n",
     "df_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb = LabelBinarizer()\n",
-    "lb_results = lb.fit_transform(df_test['theme_group'])\n",
-    "lb_results_df = pd.DataFrame(lb_results, columns=lb.classes_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Action/Adventure</th>\n",
-       "      <th>Art and crafts</th>\n",
-       "      <th>Basic</th>\n",
-       "      <th>Constraction</th>\n",
-       "      <th>Educational</th>\n",
-       "      <th>Girls</th>\n",
-       "      <th>Historical</th>\n",
-       "      <th>Junior</th>\n",
-       "      <th>Licensed</th>\n",
-       "      <th>Miscellaneous</th>\n",
-       "      <th>Model making</th>\n",
-       "      <th>Modern day</th>\n",
-       "      <th>Racing</th>\n",
-       "      <th>Technical</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Action/Adventure  Art and crafts  Basic  Constraction  Educational  Girls  \\\n",
-       "0                 0               0      0             0            0      0   \n",
-       "1                 0               0      0             0            0      0   \n",
-       "2                 0               0      0             0            0      0   \n",
-       "3                 0               0      0             0            0      0   \n",
-       "4                 0               0      0             0            0      0   \n",
-       "\n",
-       "   Historical  Junior  Licensed  Miscellaneous  Model making  Modern day  \\\n",
-       "0           0       0         0              0             0           1   \n",
-       "1           0       0         0              0             0           1   \n",
-       "2           0       0         1              0             0           0   \n",
-       "3           0       0         0              0             1           0   \n",
-       "4           0       0         0              0             1           0   \n",
-       "\n",
-       "   Racing  Technical  \n",
-       "0       0          0  \n",
-       "1       0          0  \n",
-       "2       0          0  \n",
-       "3       0          0  \n",
-       "4       0          0  "
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lb_results_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\zubaz\\anaconda3\\envs\\Lego Data Analysis\\lib\\site-packages\\pandas\\core\\generic.py:6392: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  return self._update_inplace(result)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -538,150 +375,133 @@
        "      <th></th>\n",
        "      <th>theme_group</th>\n",
        "      <th>pct_appreciation</th>\n",
-       "      <th>Action/Adventure</th>\n",
-       "      <th>Art and crafts</th>\n",
-       "      <th>Basic</th>\n",
-       "      <th>Constraction</th>\n",
-       "      <th>Educational</th>\n",
-       "      <th>Girls</th>\n",
-       "      <th>Historical</th>\n",
-       "      <th>Junior</th>\n",
-       "      <th>Licensed</th>\n",
-       "      <th>Miscellaneous</th>\n",
-       "      <th>Model making</th>\n",
-       "      <th>Modern day</th>\n",
-       "      <th>Racing</th>\n",
-       "      <th>Technical</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>set_num</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>60009</th>\n",
+       "      <td>Modern day</td>\n",
+       "      <td>56.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60012</th>\n",
+       "      <td>Modern day</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>75975</th>\n",
+       "      <td>Licensed</td>\n",
+       "      <td>-6.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10155</th>\n",
+       "      <td>Model making</td>\n",
+       "      <td>205.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10210</th>\n",
+       "      <td>Model making</td>\n",
+       "      <td>630.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9526</th>\n",
+       "      <td>Licensed</td>\n",
+       "      <td>468.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9585</th>\n",
+       "      <td>Educational</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>9594</th>\n",
+       "      <td>Educational</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>9688</th>\n",
+       "      <td>Educational</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>9695</th>\n",
+       "      <td>Educational</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1722 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  theme_group  pct_appreciation  Action/Adventure  Art and crafts  Basic  \\\n",
-       "0         NaN               NaN               0.0             0.0    0.0   \n",
-       "1         NaN               NaN               0.0             0.0    0.0   \n",
-       "2         NaN               NaN               0.0             0.0    0.0   \n",
-       "3         NaN               NaN               0.0             0.0    0.0   \n",
-       "4         NaN               NaN               0.0             0.0    0.0   \n",
+       "          theme_group  pct_appreciation\n",
+       "set_num                                \n",
+       "60009      Modern day              56.5\n",
+       "60012      Modern day               0.0\n",
+       "75975        Licensed              -6.8\n",
+       "10155    Model making             205.2\n",
+       "10210    Model making             630.0\n",
+       "...               ...               ...\n",
+       "9526         Licensed             468.0\n",
+       "9585      Educational               0.0\n",
+       "9594      Educational               0.0\n",
+       "9688      Educational               0.0\n",
+       "9695      Educational               0.0\n",
        "\n",
-       "   Constraction  Educational  Girls  Historical  Junior  Licensed  \\\n",
-       "0           0.0          0.0    0.0         0.0     0.0       0.0   \n",
-       "1           0.0          0.0    0.0         0.0     0.0       0.0   \n",
-       "2           0.0          0.0    0.0         0.0     0.0       1.0   \n",
-       "3           0.0          0.0    0.0         0.0     0.0       0.0   \n",
-       "4           0.0          0.0    0.0         0.0     0.0       0.0   \n",
-       "\n",
-       "   Miscellaneous  Model making  Modern day  Racing  Technical  \n",
-       "0            0.0           0.0         1.0     0.0        0.0  \n",
-       "1            0.0           0.0         1.0     0.0        0.0  \n",
-       "2            0.0           0.0         0.0     0.0        0.0  \n",
-       "3            0.0           1.0         0.0     0.0        0.0  \n",
-       "4            0.0           1.0         0.0     0.0        0.0  "
+       "[1722 rows x 2 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "# there are several rows with no appreciation values\n",
+    "# this might mean they are poor investments, not selling on ebay\n",
+    "# replace nan with zeros\n",
+    "# edit - I got a 'settingwithcopywarning'using the fillna(0)\n",
+    "# try another way\n",
+    "# df_test['pct_appreciation'] = df_test['pct_appreciation'].fillna(0)\n",
+    "df_test.fillna({'pct_appreciation':0}, inplace=True)\n",
+    "df_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb = LabelBinarizer()\n",
+    "lb_results = lb.fit_transform(df_test['theme_group'])\n",
+    "lb_results_df = pd.DataFrame(lb_results, columns=lb.classes_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb_results_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df_test_result = pd.concat([df_test, lb_results_df], axis=1)\n",
     "df_test_result.head()"
