Fixed problem with outlier detection
1.5*IQR wasn't catching enough low prices.
Changed to <Q1 and >Q3*1.0IQR

--- a/Data Analysis/Lego_Data_Analysis.ipynb
+++ b/Data Analysis/Lego_Data_Analysis.ipynb
@@ -20,6 +20,7 @@
     "import sqlite3 as sql\n",
     "import matplotlib.pyplot as plt\n",
     "import datetime\n",
+    "import scipy.stats as stats\n",
     "%matplotlib inline"
    ]
   },
@@ -898,11 +899,7 @@
    "source": [
     "# now that all rows in price column are numeric, change column data type to numeric\n",
     "# pandas will pick int64 if there are no decimals, float 64 if decimals are present, which there are\n",
-    "df['price'] = pd.to_numeric(df['price'])\n",
-    "\n",
-    "# change item_num to text so it doesn't use scientific notation later on\n",
-    "# df['item_num'] = df['item_num'].astype('object')\n",
-    "# df.dtypes"
+    "df['price'] = pd.to_numeric(df['price'])\n"
    ]
   },
   {
@@ -1705,6 +1702,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "af6d1586",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is the final form of the set_details data\n",
+    "# Therefore we can create a table in db for this which will be the dimension table in pbi\n",
+    "\n",
+    "database = \"C:\\\\Users\\\\zubaz\\\\Documents\\\\Python\\\\EbayLegoWebscrape\\\\lego.db\"\n",
+    "connection = sql.connect(database)\n",
+    "\n",
+    "df_set.to_sql('set_details_cleaned', connection, if_exists='replace', index=False)\n",
+    "# if_exists=replace I don't know what has and hasn't changed, nulls are difficult to update\n",
+    "# this is the easiest way to update the whole table.\n",
+    "# But it does mean I will need to scrape ALL the set nums from brickset to capture all the changes\n",
+    "\n",
+    "connection.close()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "259220b5",
    "metadata": {},
@@ -1715,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "0f61505c-6d3f-48a4-a510-a5c1b2969816",
    "metadata": {},
    "outputs": [],
@@ -1738,8 +1756,8 @@
     "        Q1 = dataframe['price'].quantile(0.25)\n",
     "        Q3 = dataframe['price'].quantile(0.75)\n",
     "        IQR = Q3 - Q1\n",
-    "        lower_lim = Q1 - 1.5*IQR\n",
-    "        upper_lim = Q3 + 1.5*IQR\n",
+    "        lower_lim = Q1 # the 1.5*IQR wasn't catching enough low prices\n",
+    "        upper_lim = Q3 + 1.0*IQR # 1.5*IQR was too high for most sets\n",
     "        outliers_15_low = (dataframe['price'] < lower_lim)\n",
     "        outliers_15_high = (dataframe['price'] > upper_lim)\n",
     "        df_outliers_removed = dataframe[~(outliers_15_low | outliers_15_high)]\n",
@@ -1753,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "6506e924",
    "metadata": {},
    "outputs": [],
@@ -1789,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "157a1fb3",
    "metadata": {},
    "outputs": [
@@ -1824,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "d8047e98",
    "metadata": {},
    "outputs": [
@@ -1833,8 +1851,8 @@
      "output_type": "stream",
      "text": [
       "df shape: (101945, 4)\n",
-      "df_no_ouliers_pbi shape: (93031, 4)\n",
-      "looped_df shape: (36180, 4)\n"
+      "df_no_ouliers_pbi shape: (68969, 4)\n",
+      "looped_df shape: (28065, 4)\n"
      ]
     }
    ],
@@ -1868,92 +1886,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "id": "bc31da88",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>set_num</th>\n",
-       "      <th>date</th>\n",
-       "      <th>price</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>item_num</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>124908235219</th>\n",
-       "      <td>76905</td>\n",
-       "      <td>2022-02-23</td>\n",
-       "      <td>84.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>125158776022</th>\n",
-       "      <td>76905</td>\n",
-       "      <td>2022-02-23</td>\n",
-       "      <td>79.95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>125162857265</th>\n",
-       "      <td>76905</td>\n",
-       "      <td>2022-02-23</td>\n",
-       "      <td>62.06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>164897340959</th>\n",
-       "      <td>76905</td>\n",
-       "      <td>2022-02-23</td>\n",
-       "      <td>99.98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>164916554154</th>\n",
-       "      <td>76905</td>\n",
-       "      <td>2022-02-23</td>\n",
-       "      <td>85.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             set_num       date  price\n",
-       "item_num                              \n",
-       "124908235219   76905 2022-02-23  84.99\n",
-       "125158776022   76905 2022-02-23  79.95\n",
-       "125162857265   76905 2022-02-23  62.06\n",
-       "164897340959   76905 2022-02-23  99.98\n",
-       "164916554154   76905 2022-02-23  85.00"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# set item_num as index to ensure one price per listing\n",
     "df_no_outliers_pbi = df_no_outliers_pbi.set_index('item_num')\n",
@@ -1962,26 +1898,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 50,
    "id": "1521762d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write df_no_ouitliers_pbi to sql for import into Power BI\n",
+    "# write df_no_outliers_pbi to sql for import into Power BI\n",
     "\n",
     "database = \"C:\\\\Users\\\\zubaz\\\\Documents\\\\Python\\\\EbayLegoWebscrape\\\\lego.db\"\n",
     "connection = sql.connect(database)\n",
     "\n",
-    "df_no_outliers_pbi.to_sql('ebay_no_outliers_pbi', connection, if_exists='append', index=True)\n",
-    "# if_exists=append will only add new rows if they don't already exist\n",
-    "# index=True let's \n",
+    "df_no_outliers_pbi.to_sql('ebay_no_outliers_pbi', connection, if_exists='replace', index=True)\n",
+    "# if_exists=replace this is the simplest method. With append it was fully writing a copy of\n",
+    "# the db every time and doubling the rows.\n",
+    "# index=True because I set the item_num as the index\n",
     "\n",
     "connection.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 51,
    "id": "4e3f3de3",
    "metadata": {},
    "outputs": [
@@ -2017,51 +1954,51 @@
        "      <th>0</th>\n",
        "      <td>76905</td>\n",
        "      <td>2022-02-23</td>\n",
-       "      <td>264550437795</td>\n",
-       "      <td>73.2628</td>\n",
+       "      <td>262266514257</td>\n",
+       "      <td>76.117727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>76905</td>\n",
        "      <td>2022-03-04</td>\n",
        "      <td>185323462745</td>\n",
-       "      <td>62.9900</td>\n",
+       "      <td>62.990000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>76905</td>\n",
-       "      <td>2022-03-06</td>\n",
-       "      <td>224871013874</td>\n",
-       "      <td>29.9900</td>\n",
+       "      <td>2022-03-14</td>\n",
+       "      <td>240158237075</td>\n",
+       "      <td>59.970000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>76905</td>\n",
-       "      <td>2022-03-08</td>\n",
-       "      <td>269669259488</td>\n",
-       "      <td>45.4850</td>\n",
+       "      <td>2022-03-16</td>\n",
+       "      <td>165386096803</td>\n",
+       "      <td>86.110000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>76905</td>\n",
-       "      <td>2022-03-11</td>\n",
-       "      <td>255429395532</td>\n",
-       "      <td>50.0000</td>\n",
+       "      <td>2022-03-21</td>\n",
+       "      <td>284704568574</td>\n",
+       "      <td>75.050000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  set_num       date      item_num    price\n",
-       "0   76905 2022-02-23  264550437795  73.2628\n",
-       "1   76905 2022-03-04  185323462745  62.9900\n",
-       "2   76905 2022-03-06  224871013874  29.9900\n",
-       "3   76905 2022-03-08  269669259488  45.4850\n",
-       "4   76905 2022-03-11  255429395532  50.0000"
+       "  set_num       date      item_num      price\n",
+       "0   76905 2022-02-23  262266514257  76.117727\n",
+       "1   76905 2022-03-04  185323462745  62.990000\n",
+       "2   76905 2022-03-14  240158237075  59.970000\n",
+       "3   76905 2022-03-16  165386096803  86.110000\n",
+       "4   76905 2022-03-21  284704568574  75.050000"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2074,17 +2011,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 52,
    "id": "1e06e038",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(36180, 4)"
+       "(28065, 4)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2102,26 +2039,6 @@
     "Write to database a clean dataset of sales data that is loaded into Power BI for analysis.\n",
     "Much easier to do the clean up and outlier detection in python.\n",
     "Also easier to import from SQLite db into Power BI than do the csv dance."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42d9c28b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create new df for this\n",
-    "# shallow copy only copies the references to the data, changes are shared\n",
-    "# deep copy creates an entirely new dataframe, changes will not be shared\n",
-    "# we want deep, because we will be changing the index.\n",
-    "\n",
-    "powerBI_df = looped_df.copy(deep=True)\n",
-    "\n",
-    "# change index to item_num\n",
-    "# this will ensure there is only one data point per listing\n",
-    "\n",
-    "powerBI_df.set_index('item_num')"
    ]
   },
   {
